deleted linkedList