@@ -15,8 +15,8 @@ public class ListDemo {
 
     private void arrayListDemo() {
         List<Integer> list = new ArrayList<>(Arrays.asList(1,5,3,2));
-        List<Integer> ascendingList = list.stream().sorted().collect(Collectors.toList());
-        List<Integer> descendingList = list.stream().sorted(Comparator.reverseOrder()).collect(Collectors.toList());
+        List<Integer> ascendingList = list.stream().sorted().toList();
+        List<Integer> descendingList = list.stream().sorted(Comparator.reverseOrder()).toList();
 
          System.out.println("List: "+ list);
          System.out.println("Ascending List: "+ ascendingList);
@@ -27,23 +27,19 @@ public class ListDemo {
         List<Integer> list = new ArrayList<>(Arrays.asList(1,5,3,2));
         LinkedList<Integer> linkedList = new LinkedList<>(list);
         linkedList.add(2, 10 );
-        List<Integer> ascList = linkedList.stream().sorted().collect(Collectors.toList());
+        List<Integer> ascList = linkedList.stream().sorted().toList();
 
         System.out.println(linkedList);
         System.out.println("Ascending linkedList: "+ ascList);
-
     }
 
-    private void priorityQueueDemp() {
+    private void priorityQueueDemo() {
         List<Integer> arr = Arrays.asList(1,2,3,4);
         Queue<Integer> queue = new PriorityQueue<>(arr);
 
         System.out.println(queue);
     }
 
-    private void hashSetDemo() {
-
-    }
 
 //    HashMap is the implementation of Map, but it doesn't maintain any order.
     private void hashMapDemo() {
@@ -53,12 +49,10 @@ public class ListDemo {
         Movie movie4 = new Movie(3, "Pi");
         List<Movie> movies = new ArrayList<>(Arrays.asList(movie1, movie2, movie3, movie4));
 
-//        movies.stream().map(movie -> movie.getTitle()).forEach(System.out::println);
-
         Map<Integer, List<Movie>> map =
                 movies.stream().collect(Collectors.groupingBy(Movie::getSerialCode));
 
-        map.entrySet().stream()
+        map.entrySet()
                 .forEach(k -> System.out.println(k.getKey() + ": " + k.getValue()));
 
     }
